fix: align card images to center

--- a/ui/v2.5/src/components/Images/styles.scss
+++ b/ui/v2.5/src/components/Images/styles.scss
@@ -86,6 +86,7 @@
   }
 
   &-preview {
+    align-items: center;
     display: flex;
     justify-content: center;
     margin-bottom: 5px;
@@ -94,7 +95,6 @@
     &-image {
       height: 100%;
       object-fit: contain;
-      object-position: top;
       width: 100%;
     }
 
